# SimpleSocketDemo

./: CMakeLists.txt  client.cpp  server.cpp
Socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.h
